	Only one script is included so far: kaddressbook_ipod. Please
	submit more for inclusion into the next release.

	IMPROVEMENT: can specify several templates to scan the filename
	for tags using the ';' as a separator

	IMPROVEMENT: can specify several templates for the export
	filename. gtkpod selects according to the extension given.

	IMPROVEMENT: streamlined layout of info window

	IMPROVEMENT: send 'eject' to the iPod after unmounting. This only
	works if the user has write access to the device file
	(e.g. /dev/sda2)

	BUGFIX: Fixed compile error when compiling without mp4 support

	BUGFIX: Fixed compile error when compiling with gcc 2.95

	BUGFIX: Tags of tracks on the iPod were never changed (thanks
	to Andrew Huntwork)

gtkpod V0.72
        NEW FEATURE: tags can now be set from the filename using a
	template like "%a - %A/%T %t.mp3".

	IMPROVEMENT: read and write ID3v2.4 tags. This has been achieved
	by migrating to the id3tag library. Using ID3v2.4 tags with
	unicode encoding takes away the need to worry about which encoding
	is used for the tags. Old "broken"-style locale charset encodings
	in tags are still supported, of course.

	BUGFIX: configure script was broken -- even though mp4 support was
	configured in, gtkpod was built without :-(

gtkpod V0.70
	NEW FEATURE: import of AAC files (.m4a) supported, provided the
	mp4v2 library from the mpeg4ip project
	(mpeg4ip.sourceforge.net) is available during the compilation of
	gtkpod. Writing tags to AAC files is also supported.  .m4p files
	can also be imported, but they are not played by the iPod. .m4a
	files work fine.

	NEW FEATURE: info window showing total file size, play
	time etc. can be opened.

	IMPROVEMENT: Upon popular request, the menus now provide
	different entries for "Delete from iPod" and "Delete from
	Playlist".

	IMPROVEMENT: when deleting tracks completely from the iPod, the
	confirmation dialog also displays the number of playlists the
	tracks are members of.
