@@ -69,5 +69,5 @@ void fill_in_extended_info (Track *track);
 double get_filesize_of_deleted_tracks (guint32 *num);
 Track *get_track_info_from_file (gchar *name, Track *or_track);
 void update_charset_info (Track *track);
-
+gchar *resolve_path(const gchar *,const gchar * const *);
 #endif
